# base-apps

./: .gitignore  README.md  pyproject.toml
src/: assets-map.json
src/agenda/: admin.py  apps.py  components.py  gouv.ical.ics  signals.py  tests.py  urls.py
src/agenda/forms/: __init__.py  colles.py  events.py  tests.py  year.py
src/agenda/models/: README  __init__.py  attendance.py  colles.py  compatibility.py  events.py  tests.py  timetable.py  utils.py  year.py
src/agenda/templatetags/: hour_to_percent.py  math_tag.py
src/agenda/views/: __init__.py  api.py  events.py  home.py  inscriptions.py  tests.py  year.py
src/base_archives/: __init__.py  db_save.py  tests.py  urls.py  views.py
src/base_archives/management/: tests.py
src/bulkimport/: dict_utils.py  importers.py  tests.py  urls.py  views.py
src/bulkimport/filetypes/: __init__.py  csv.py  json.py
src/core/: base_classes.py  base_settings.py  base_urls.py  context_processors.py  secrets.json  storage.py
src/dev/: test_data.py  test_utils.py  test_view.py
src/quill_editor/: config.py  fields.py  forms.py  tests.py  widgets.py
src/templates/: actions.html  base.html  inline_head_script.js  side_navigation.html
src/users/: admin.py  apps.py  change_collegroups.py  context_processors.py  decorators.py  emailbackend.py  forms.py  middlewares.py  permissions.py  signals.py  test_changegroup.py  test_views.py  tests.py  urls.py  views.py
src/utils/: actions.py  components.py  menu.py  reverse.py  tests.py
tests/: .coverage  .env_base  coverage_run  manage.py  run  settings.py  tox.ini  urls.py
(+121 files in other folders)
